# bdcom_mcp

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  README.md  my_tester.py  pyproject.toml  requirements.txt  smoke_test.py
cisco_mcp/: __init__.py  connection.py  server.py
device_mcp/: __init__.py  bdcom.py  connection.py  server.py
tests/: conftest.py  switch_emulator.py  test_confirm_matcher.py  test_emulator_integration.py
