[project]
name = "cisco-mcp"
version = "1.0.0"
description = "A FastMCP server for Cisco device management via SSH/Telnet. Execute commands and manage Cisco routers, switches, and firewalls through AI assistants."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "very99" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "cisco",
    "networking",
    "ssh",
    "telnet",
    "netmiko",
    "router",
    "switch",
    "firewall",
    "network-automation",
]
dependencies = [
    "fastmcp>=2.0.0",
    "netmiko>=4.3.0",
]

[project.scripts]
cisco-mcp = "cisco_mcp.server:main"

[project.urls]
Homepage = "https://github.com/very99/cisco-mcp"
Repository = "https://github.com/very99/cisco-mcp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cisco_mcp"]
