[project]
name = "device-mcp"
version = "1.0.0"
description = "A FastMCP server for network device management via SSH/Telnet. Execute commands and manage routers, switches, and firewalls (Cisco IOS, BDCOM, and any netmiko platform) through AI assistants."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "very99" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "networking",
    "ssh",
    "telnet",
    "netmiko",
    "router",
    "switch",
    "firewall",
    "network-automation",
    "cisco",
    "bdcom",
]
dependencies = [
    "fastmcp>=2.0.0",
    "netmiko>=4.3.0",
]

[project.scripts]
device-mcp = "device_mcp.server:main"

[project.urls]
Homepage = "https://github.com/very99/cisco-mcp"
Repository = "https://github.com/very99/cisco-mcp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["device_mcp"]
